--- a/style.css
+++ b/style.css
@@ -17,3 +17,11 @@ body{
     color: var(--branco-principal);
  
 }
+
+.principal{
+    background-image: url(img/Background.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
+}
