--- a/style.css
+++ b/style.css
@@ -41,3 +41,42 @@ body{
     text-decoration: none;
 
 }
+
+.botao_secundario{
+    background-color: transparent;
+    border: 2px solid var(--cinza-secundario);
+}
+
+.container__aviso{
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
+.conatiner__titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.container__imagem{
+    margin: 1em 0 2em 0;
+}
+
+.container__caixa{
+    margin: 0 6em;
+}
+
+.secundario__imagem{
+   width: 80%;
+}
+
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__texto{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom:0.1em;
+}
